Issue #38 (add ellipsis word wrap to seo phrases list items)

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -4,6 +4,12 @@
 	text-align:center;
 }
 
+.word_wrap_li {
+	display: block;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
 /* Login container style */
 
